--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # server.port=8081
-
-spring.application.name=Spring Boot demo application
-
+spring.application.name=ADT CQRS Demo
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:adtdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# We look for Axon Server locally, unless we find a PCF Binding for AxonServer
+# SERVE?: axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
