--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
-# SERVE?: axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
+# axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
